--- a/auth.html
+++ b/auth.html
@@ -126,7 +126,7 @@
     }
     form main section .form-group input:focus {
       outline: none;
-      border :1.5px solid #2972ff;
+      border :1.5px solid #24f7ff;
     }
     form main section button {
       width: 100%;
