--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Penny Partner</title>
     <link rel="icon" href="images/app-logo.png" type="image/png" />
+    <link rel="stylesheet" href="css/mediaQuery.css">
     <link rel="stylesheet" href="css/darkmode.css" />
     <link rel="stylesheet" href="css/home.css" />
     <link rel="stylesheet" href="css/style.css" />
