--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Penny Partner</title>
     <link rel="icon" href="images/app-logo.png" type="image/png" />
-    <link rel="stylesheet" href="css/mediaQuery.css">
+    <link rel="stylesheet" href="css/mediaQuery.css" />
     <link rel="stylesheet" href="css/darkmode.css" />
     <link rel="stylesheet" href="css/home.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -129,12 +129,12 @@
                 <input type="text" hidden value="1" id="category-ticked" />
                 <ul class="sub-head-one">
                   <li class="income-body" value="0">
-                    <img style="filter: invert(1)" class="svg" src="" alt="" />
+                    <img  class="svg" src="" alt="" />
                     <p class="semi-bold">INCOME</p>
                   </li>
                   <li class="expense-body" value="1">
                     <img
-                      style="filter: invert(1)"
+                     
                       class="svg"
                       src="icons/tick.svg"
                       alt=""
@@ -142,7 +142,7 @@
                     <p class="semi-bold">EXPENSE</p>
                   </li>
                   <li class="transfer-body" value="2">
-                    <img style="filter: invert(1)" class="svg" src="" alt="" />
+                    <img  class="svg" src="" alt="" />
                     <p class="semi-bold">TRANSFER</p>
                   </li>
                 </ul>
@@ -151,24 +151,14 @@
                     <p class="change-font-style">Account</p>
                     <div class="child-body" data-id="7876543310">
                       <p class="semi-bold">Account</p>
-                      <img
-                        style="filter: invert(1)"
-                        class="svg"
-                        src="icons/account.svg"
-                        alt=""
-                      />
+                      <img class="svg" src="icons/account.svg" alt="" />
                     </div>
                   </div>
                   <div class="category-body">
                     <p class="change-font-style">Category</p>
                     <div class="child-body" data-id="2876543210">
                       <p class="semi-bold">Category</p>
-                      <img
-                        style="filter: invert(1)"
-                        class="svg"
-                        src="icons/category.svg"
-                        alt=""
-                      />
+                      <img class="svg" src="icons/category.svg" alt="" />
                     </div>
                   </div>
                 </div>
