--- a/index.html
+++ b/index.html
@@ -22,6 +22,31 @@
         </div>
         <img class="svg" src="icons/search.svg" alt="" />
       </header>
+      <div class="side-footer">
+        <ul class="menu">
+          <li class="active">
+            <img class="svg" src="icons/home.svg" alt="" />
+            <p>Home</p>
+          </li>
+          <li>
+            <img class="svg" src="icons/analysis.svg" alt="" />
+            <p>Dashboard</p>
+          </li>
+          <li>
+            <img class="svg" src="icons/calculator.svg" alt="" />
+            <p>Budgets</p>
+          </li>
+
+          <li>
+            <img class="svg" src="icons/account.svg" alt="" />
+            <p>Accounts</p>
+          </li>
+          <li>
+            <img class="svg" src="icons/category.svg" alt="" />
+            <p>categories</p>
+          </li>
+        </ul>
+      </div>
       <main>
         <section class="home active">
           <div class="home-container">
@@ -129,20 +154,15 @@
                 <input type="text" hidden value="1" id="category-ticked" />
                 <ul class="sub-head-one">
                   <li class="income-body" value="0">
-                    <img  class="svg" src="" alt="" />
+                    <img class="svg" src="" alt="" />
                     <p class="semi-bold">INCOME</p>
                   </li>
                   <li class="expense-body" value="1">
-                    <img
-                     
-                      class="svg"
-                      src="icons/tick.svg"
-                      alt=""
-                    />
+                    <img class="svg" src="icons/tick.svg" alt="" />
                     <p class="semi-bold">EXPENSE</p>
                   </li>
                   <li class="transfer-body" value="2">
-                    <img  class="svg" src="" alt="" />
+                    <img class="svg" src="" alt="" />
                     <p class="semi-bold">TRANSFER</p>
                   </li>
                 </ul>
@@ -1223,8 +1243,8 @@
 
     <script type="module" src="JavaScript/home.js"></script>
     <script async type="module" src="JavaScript/script.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script type="module" src="JavaScript/analysis.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script type="module" src="JavaScript/analysis.js"></script>
     <script defer type="module" src="JavaScript/functions.js"></script>
     <script defer type="module" src="JavaScript/category.js"></script>
     <script defer type="module" src="JavaScript/budget.js"></script>
