--- a/index.html
+++ b/index.html
@@ -43,7 +43,23 @@
           </li>
           <li>
             <img class="svg" src="icons/category.svg" alt="" />
-            <p>categories</p>
+            <p>Categories</p>
+          </li>
+          <li>
+            <img class="svg" src="icons/budgeted.svg" alt="" />
+            <p>Budgeted</p>
+          </li>
+          <li>
+            <img class="svg" src="icons/unbudgeted.svg" alt="" />
+            <p>Unbudgeted</p>
+          </li>
+          <li>
+            <img class="svg" src="icons/income.svg" alt="" />
+            <p>Income</p>
+          </li>
+          <li>
+            <img class="svg" src="icons/expense.svg" alt="" />
+            <p>Expense</p>
           </li>
         </ul>
       </div>
