--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </ul>
       </div>
       <main>
-        <section class="home active">
+        <section class="home">
           <div class="home-container">
             <header>
               <div class="month-body">
@@ -585,8 +585,22 @@
             </div>
           </div>
         </section>
-        <section class="categories">
+        <section class="categories active">
           <div class="category-container">
+            <div class="income-category-skeleton">
+              <h3></h3>
+              <ul class="income-list-skeketon">
+                <li>
+                  <div class="left-portion">
+                    <div class="img"></div>
+                    <p class="change-font-style"></p>
+                  </div>
+                  <div class="right-portion">
+                    <div class="dot svg img"></div>
+                  </div>
+                </li>
+              </ul>
+            </div>
             <div class="income-category">
               <h3>Income categories</h3>
               <ul class="income-list"></ul>
