--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </ul>
       </div>
       <main>
-        <section class="home">
+        <section class="home active">
           <div class="home-container">
             <header>
               <div class="month-body">
@@ -585,7 +585,7 @@
             </div>
           </div>
         </section>
-        <section class="categories active">
+        <section class="categories">
           <div class="category-container">
             <div class="income-category-skeleton">
               <h3></h3>
@@ -945,7 +945,7 @@
               <img class="svg" src="icons/account.svg" alt="" />
               <small>Accounts</small>
             </li>
-            <li>
+            <li  class="skeleton-category">
               <img class="svg" src="icons/category.svg" alt="" />
               <small>categories</small>
             </li>
