--- a/index.html
+++ b/index.html
@@ -589,27 +589,21 @@
           <div class="category-container">
             <div class="income-category-skeleton">
               <h3></h3>
-              <ul class="income-list-skeketon">
-                <li>
-                  <div class="left-portion">
-                    <div class="img"></div>
-                    <p class="change-font-style"></p>
-                  </div>
-                  <div class="right-portion">
-                    <div class="dot svg img"></div>
-                  </div>
-                </li>
-              </ul>
+              <ul class="income-list-skeketon"></ul>
             </div>
-            <div class="income-category">
+            <div class="expense-category-skeleton">
+              <h3></h3>
+              <ul class="expense-list-skeketon"></ul>
+            </div>
+            <div class="income-category active-category">
               <h3>Income categories</h3>
               <ul class="income-list"></ul>
             </div>
-            <div class="expense-category">
+            <div class="expense-category active-category">
               <h3>Expense categories</h3>
               <ul class="expense-list"></ul>
             </div>
-            <div class="add-category">
+            <div class="add-category active-category">
               <div class="add-box">
                 <img class="svg" src="icons/plus.svg" alt="" />
                 <p>ADD NEW CATEGORY</p>
@@ -945,7 +939,7 @@
               <img class="svg" src="icons/account.svg" alt="" />
               <small>Accounts</small>
             </li>
-            <li  class="skeleton-category">
+            <li class="skeleton-category">
               <img class="svg" src="icons/category.svg" alt="" />
               <small>categories</small>
             </li>
