--- a/index.html
+++ b/index.html
@@ -445,22 +445,6 @@
             <div class="account-container">
               <ul class="accounts">
                 <h3>Accounts</h3>
-                <!-- <li class="card">
-                  <div class="card-body">
-                    <img src="Accounts/currency-notes_15326442.png" alt="" />
-                    <div class="card-info">
-                      <p class="bold">Card</p>
-                      <p>Balance: <span class="green bold">₹23,323</span></p>
-                    </div>
-                  </div>
-                  <div class="operations">
-                    <img class="dot" src="icons/dot.svg" alt="" />
-                    <div class="options">
-                      <p class="edit-btn">Edit</p>
-                      <p class="delete-account">Delete</p>
-                    </div>
-                  </div>
-                </li>-->
               </ul>
             </div>
             <div class="add-account">
@@ -545,6 +529,15 @@
                   id="edit-amount"
                 />
                 <label for="initial-amount">Amount</label>
+              </div>
+              <div class="input-body">
+                <input
+                  autocomplete="off"
+                  type="text"
+                  required
+                  id="edit-account-name"
+                />
+                <label for="edit-account-name">Account name</label>
               </div>
             </div>
             <div class="account-icons-parent">
