--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </ul>
       </div>
       <main>
-        <section class="home active">
+        <section class="home">
           <div class="home-container">
             <header>
               <div class="month-body">
@@ -320,7 +320,7 @@
             </div>
           </div>
         </section>
-        <section class="budgets">
+        <section class="budgets active">
           <div class="budget-container">
             <header>
               <div class="head-content">
