--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
         </section>
         <section class="budgets active">
           <div class="budget-container">
+            <div class="budget-skeleton-effect">....</div>
             <header>
               <div class="head-content">
                 <div class="month-info">
