--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </ul>
       </div>
       <main>
-        <section class="home">
+        <section class="home active">
           <div class="home-container">
             <header>
               <div class="month-body">
@@ -320,9 +320,8 @@
             </div>
           </div>
         </section>
-        <section class="budgets active">
+        <section class="budgets">
           <div class="budget-container">
-            <div class="budget-skeleton-effect">....</div>
             <header>
               <div class="head-content">
                 <div class="month-info">
