--- a/index.html
+++ b/index.html
@@ -242,24 +242,11 @@
               </div>
               <div class="account-options-body">
                 <h2>Select an account</h2>
-                <ul class="parent-box">
-                  <li>
-                    <div class="left-part">
-                      <img src="./Accounts/dollar-bag_15326399.png" alt="" />
-                      <p class="semi-bold">Savings</p>
-                    </div>
-                    <p class="semi-bold red">₹23,999</p>
-                  </li>
-                </ul>
+                <ul class="parent-box"></ul>
               </div>
               <div class="category-options-body">
                 <h2>Select Category</h2>
-                <ul class="parent-box">
-                  <li>
-                    <img src="./icons/Income-expense/watch.jpg" alt="" />
-                    <small>Watch</small>
-                  </li>
-                </ul>
+                <ul class="parent-box"></ul>
               </div>
               <!-- Tostal -->
               <div class="success-tostal">
@@ -1036,7 +1023,6 @@
                 <img src="images/app-logo.png" alt="" />
               </div>
               <p>Rate this web app</p>
-              <!-- <small>Tell others what you think.</small> -->
             </div>
             <div class="rating-star-container">
               <input hidden type="tel" value="0" id="rateValue" />
@@ -1071,8 +1057,6 @@
           </div>
           <img class="svg write-pen" src="icons/edit.svg" alt="" />
         </header>
-
-        <!-- <p>Ratings and reviews</p> -->
 
         <div class="rr-body">
           <div class="rating-num-left">
