--- a/index.html
+++ b/index.html
@@ -66,6 +66,27 @@
       <main>
         <section class="home active">
           <div class="home-container">
+            <div class="skeleton home-skeleton-effect">
+              <div class="skeleton-month-body">
+                <h3 class="skeleton-month"></h3>
+              </div>
+              <div class="skeleton-balance-info">
+                <div class="skeleton-expense-box"></div>
+                <div class="skeleton-income-box"></div>
+                <div class="skeleton-total-box"></div>
+              </div>
+            </div>
+            <div class="skeleton-outer home-skeleton-effect">
+              <ul  class="skeleton-inner">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+            </div>
             <header>
               <div class="month-body">
                 <div class="left-arrow"></div>
@@ -905,7 +926,7 @@
       <footer>
         <nav>
           <ul>
-            <li>
+            <li class="active">
               <img class="svg" src="icons/home.svg" alt="" />
               <small>Records</small>
             </li>
