--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
               </div>
             </div>
             <div class="skeleton-outer home-skeleton-effect">
-              <ul  class="skeleton-inner">
+              <ul class="skeleton-inner">
+                <li></li>
                 <li></li>
                 <li></li>
                 <li></li>
@@ -1138,9 +1139,21 @@
           <h2 style="color: #ffffff">My Account</h2>
         </div>
         <div class="account-container-body">
+          <div class="edit-box">
+            <div class="input-container">
+              <form>
+                <label for="username">Update your username</label>
+                <input value="Ganesh" type="text" autofocus autocomplete="off" name="username" id="username" />
+                <div class="aBtns">
+                  <button>Discard</button>
+                  <button>Update</button>
+                </div>
+              </form>
+            </div>
+          </div>
           <div class="settings">
             <ul>
-              <li>
+              <li class="edit-username">
                 <div class="left-part">
                   <img class="svg" src="icons/edit.svg" alt="Edit Icon" />
                   <div class="info">
