--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
               <img class="svg" src="icons/analysis.svg" alt="" />
               <small>Analysis</small>
             </li>
-            <li>
+            <li class="skeleton-budget">
               <img class="svg" src="icons/calculator.svg" alt="" />
               <small>Budgets</small>
             </li>
@@ -1143,7 +1143,14 @@
             <div class="input-container">
               <form>
                 <label for="username">Update your username</label>
-                <input value="Ganesh" type="text" autofocus autocomplete="off" name="username" id="username" />
+                <input
+                  value="Ganesh"
+                  type="text"
+                  autofocus
+                  autocomplete="off"
+                  name="username"
+                  id="username"
+                />
                 <div class="aBtns">
                   <button>Discard</button>
                   <button>Update</button>
