--- a/index.html
+++ b/index.html
@@ -950,17 +950,25 @@
           </ul>
         </nav>
       </footer>
-      <div class="sidebar">
+      <div class="sidebar active">
         <img
           src="icons/close.svg"
           alt=""
           class="close"
           style="filter: invert(1)"
         />
+
         <header>
+          <img class="sun-theme" src="./sun.png" alt="" />
+          <img class="cloud-2" src="./cloud.png" alt="" />
+          <img class="cloud-3" src="./cloud.png" alt="" />
+          <marquee direction="left" scrollamount="1">
+            <img src="./cloud.png" alt="Cloud" class="cloud">
+          </marquee>          
           <img class="user-profile" src="images/men.png" alt="" />
           <h2>Hello Ganesh</h2>
         </header>
+
         <div class="settings">
           <ul>
             <li class="show-my-account">
