--- a/index.html
+++ b/index.html
@@ -950,7 +950,7 @@
           </ul>
         </nav>
       </footer>
-      <div class="sidebar active">
+      <div class="sidebar">
         <img
           src="icons/close.svg"
           alt=""
