--- a/index.html
+++ b/index.html
@@ -962,9 +962,9 @@
           <img class="sun-theme" src="./sun.png" alt="" />
           <img class="cloud-2" src="./cloud.png" alt="" />
           <img class="cloud-3" src="./cloud.png" alt="" />
-          <marquee direction="left" scrollamount="1">
-            <img src="./cloud.png" alt="Cloud" class="cloud">
-          </marquee>          
+          <div class="scroll-container">
+            <img src="./cloud.png" class="cloud" alt="Cloud">
+          </div>    
           <img class="user-profile" src="images/men.png" alt="" />
           <h2>Hello Ganesh</h2>
         </header>
