--- a/index.html
+++ b/index.html
@@ -963,8 +963,8 @@
           <img class="cloud-2" src="./cloud.png" alt="" />
           <img class="cloud-3" src="./cloud.png" alt="" />
           <div class="scroll-container">
-            <img src="./cloud.png" class="cloud" alt="Cloud">
-          </div>    
+            <img src="./cloud.png" class="cloud" alt="Cloud" />
+          </div>
           <img class="user-profile" src="images/men.png" alt="" />
           <h2>Hello Ganesh</h2>
         </header>
@@ -1149,21 +1149,24 @@
         <div class="account-container-body">
           <div class="edit-box">
             <div class="input-container">
-              <form>
-                <label for="username">Update your username</label>
+              <div class="form">
+                <label for="username">Update username</label>
+               <div class="input-box">
+                <img src="icons/user.svg" alt="">
                 <input
-                  value="Ganesh"
-                  type="text"
-                  autofocus
-                  autocomplete="off"
-                  name="username"
-                  id="username"
-                />
+                value="Ganesh"
+                type="text"
+                autofocus
+                autocomplete="off"
+                name="username"
+                id="username"
+              />
+               </div>
                 <div class="aBtns">
-                  <button>Discard</button>
+                  <button class="cancel-btn">Discard</button>
                   <button>Update</button>
                 </div>
-              </form>
+              </div>
             </div>
           </div>
           <div class="settings">
