--- a/index.html
+++ b/index.html
@@ -1151,21 +1151,34 @@
             <div class="input-container">
               <div class="form">
                 <label for="username">Update username</label>
-               <div class="input-box">
-                <img src="icons/user.svg" alt="">
-                <input
-                value="Ganesh"
-                type="text"
-                autofocus
-                autocomplete="off"
-                name="username"
-                id="username"
-              />
-               </div>
+                <div class="input-box">
+                  <img src="icons/user.svg" alt="" />
+                  <input
+                    value="Ganesh"
+                    type="text"
+                    autofocus
+                    autocomplete="off"
+                    name="username"
+                    id="username"
+                  />
+                </div>
                 <div class="aBtns">
                   <button class="cancel-btn">Discard</button>
                   <button>Update</button>
                 </div>
+              </div>
+            </div>
+          </div>
+          <div class="currency-container">
+            <div class="currency-body">
+              <h2>
+                <p></p>
+                <p class="dot-2"></p>
+                <p class="dot-3"></p>
+                Currency Sign</h2>
+              <ul class="currency-options"></ul>
+              <div class="bottom-part">
+                <button class="close-currency">CANCEL</button>
               </div>
             </div>
           </div>
@@ -1186,7 +1199,7 @@
                 />
               </li>
 
-              <li>
+              <li class="currency-open">
                 <div class="left-part">
                   <img
                     class="svg"
